# skin-changer

cs2-skin-changer-master/: CMakeLists.txt
cs2-skin-changer-master/ext-cs2-skin-changer/: ext-cs2-skin-changer.vcxproj  ext-cs2-skin-changer.vcxproj.filters
cs2-skin-changer-master/ext-cs2-skin-changer/ext/: mem.h  offsets.h  skindb.h
cs2-skin-changer-master/ext-cs2-skin-changer/ext/a2x/: offsets.hpp
cs2-skin-changer-master/ext-cs2-skin-changer/src/: baseConfig.h  gameAlloc.h  main.cpp  menu.h
cs2-skin-changer-master/ext-cs2-skin-changer/src/SDK/: CEconItemAttributeManager.h
cs2-skin-changer-master/ext-cs2-skin-changer/src/SDK/entity/: CWeaponServices.h  C_CS2HudModelArms.h  dwEntityListManager.h
cs2-skin-changer-master/ext-cs2-skin-changer/src/SDK/weapon/: C_EconEntity.h
cs2-skin-changer-master/ext-cs2-skin-changer/src/output/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.rs  animationsystem_dll.zig  buttons.cs  buttons.hpp  buttons.rs  buttons.zig  client_dll.cs  client_dll.hpp  client_dll.rs  client_dll.zig  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  engine2_dll.zig  host_dll.cs  host_dll.hpp  host_dll.rs  host_dll.zig  info.json  interfaces.cs  interfaces.hpp  interfaces.rs  interfaces.zig  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  materialsystem2_dll.zig  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  networksystem_dll.zig  offsets.cs  offsets.hpp  offsets.rs  offsets.zig  panorama_dll.cs  panorama_dll.hpp  panorama_dll.rs  (+45 more)
cs2-skin-changer-master/ext-cs2-skin-changer/src/window/: window.hpp
